Blog: remove white space below image. Fixes #13
The blog post image used to have a little git of white space below the
image. That’s been taken out by encoding the size of the image.

--- a/public/css/audience/blog/archive.css
+++ b/public/css/audience/blog/archive.css
@@ -35,6 +35,7 @@
 
 		.voices-audience-blog-archive-col-2-image-container {
 			width: 100%;
+			height: 262px;
 			box-shadow: 3px 3px 1px 1px #777777;
 		}
 
